meta tag changed

--- a/mockloc-reactapp-netlify/public/index.html
+++ b/mockloc-reactapp-netlify/public/index.html
@@ -8,7 +8,7 @@
   <meta property='og:title' content='Mockloc' />
   <meta property='og:image' content='https://i.ibb.co/WtKDpYt/mockloc-banner.png'/>
   <meta property='og:description' content='Mockloc your location testing buddy, click over this link to open this in app' />
-  <meta property='og:url' content='https://mockloc.netlify.app' />
+  <meta property='og:url' content='https://mocklocapp.com' />
   <meta itemprop="image" content="https://i.ibb.co/C0MQGVX/logo192.png" />
   <meta itemprop="name" content="Mockloc" />
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +24,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#000000" />
 <meta name="description" content="Web site created using create-react-app" />
-<meta name="google-site-verification" content="z5nxvqJioPoUlAwSpMpIZoxTDhZU758wkSnsNIqd5-o" />
+<meta name="google-site-verification" content="V6wWChWSJaZft8ie71zpRDWqjWSpEgT9sglTJL3vokM" />
+
 <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 <!--
     manifest.json provides metadata used when your web app is installed on a
